==> 2152165718hd-crypto/STM32-/基于物联网的仓库环境与安防系统/4.案例程序/物联网的仓库环境与安防系统/Drivers/Hardware/OLED/OLED.c <==
#include ".\Hardware\OLED\OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_W_SCL(uint8_t BitValue)
{
	/*根据BitValue的值，将SCL置高电平或者低电平*/
	HAL_GPIO_WritePin(OLED_SCL_PORT, OLED_SCL_PIN, (GPIO_PinState)BitValue);

	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
}

void OLED_W_SDA(uint8_t BitValue)
{
	/*根据BitValue的值，将SDA置高电平或者低电平*/
	HAL_GPIO_WritePin(OLED_SDA_PORT, OLED_SDA_PIN, (GPIO_PinState)BitValue);

	/*如果单片机速度过快，可在此添加适量延时，以避免超出I2C通信的最大速度*/
	//...
}

void OLED_GPIO_Init(void)
{
	uint32_t i, j;

	/*在初始化前，加入适量延时，待OLED供电稳定*/
	for (i = 0; i < 1000; i++)
	{
		for (j = 0; j < 1000; j++)
			;
	}
	GPIO_InitTypeDef GPIO_InitStruct = {0};

	/*将SCL和SDA引脚初始化为开漏模式*/
	__HAL_RCC_GPIOB_CLK_ENABLE();
	GPIO_InitStruct.Pin = OLED_SCL_PIN | OLED_SDA_PIN;
	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
	HAL_GPIO_Init(OLED_SCL_PORT, &GPIO_InitStruct);
	HAL_GPIO_Init(OLED_SDA_PORT, &GPIO_InitStruct);
	/*释放SCL和SDA*/
	OLED_W_SCL(1);
	OLED_W_SDA(1);
}

void OLED_GPIO_Init(void)
{
	uint32_t i, j;

	/*在初始化前，加入适量延时，待OLED供电稳定*/
	for (i = 0; i < 1000; i++)
	{
		for (j = 0; j < 1000; j++)
			;
	}

	/* 初始化硬件I2C */
	OLED_I2C1_Init();
}
